firstLandingPage/styles.css
/* ... */
@media only screen and (max-width: 320px) {
  nav {
    display: none;
  }

  .header-logo {
    margin-left: -60px;
    margin-top: auto;
    width: 80px;
    height: 40px;
  }

  .header-icon {
    display: inline-block;
    font-size: 25px;
    margin-top: 6px;
    position: absolute;
    margin-left: 230px;
  }

  .show {
    display: block;
    position: relative;
    width: 100%;
    padding: 25px;
    color: white;
    font-size: 25px;
    text-align: center;
    box-sizing: border-box;
  }
}

@media only screen and (max-width: 320px) {
  nav {
    display: none;
  }

  .header-logo {
    margin-left: -60px;
    margin-top: auto;
    width: 70px;
    height: 30px;
  }

  .header-icon {
    display: inline-block;
    font-size: 22px;
    margin-top: 3px;
    position: absolute;
    margin-left: 180px;
  }

  .show {
    display: block;
    position: relative;
    width: 100%;
    padding: 15px;
    color: white;
    text-align: center;
    box-sizing: border-box;
  }

  .link-hover {
    font-size: 18px;
    width: 100px;
  }
}

@media only screen and (max-width: 1024px) {
  .header-logo {
    margin-left: -50px;
  }

  .navbar {
    margin-right: -50px;
  }

  .navbar .navbar-list .link-hover {
    font-size: 18px;
  }

  .main-section {
    width: 100%;
  }

  .main-section .main_head {
    padding-left: 78px;
    font-size: 60px;
  }

  .container_a {
    margin-left: 80px;
    width: 720px;
    height: 100%;
  }

  .container_b {
    margin-left: 220px;
    width: 70%;
    height: 150px;
  }

  .container_b .c_b_section_sub_con {
    width: 20%;
    height: 100%;
  }

  .container_b .icon_sub {
    margin-top: -5px;
    height: 40%;
    width: 50%;
  }

  .container_b .icon_sub .fa-solid {
    font-size: 30px;
  }

  .container_b .c_b_section_sub_con p {
    margin-top: -10px;
    font-size: 0.87rem;
  }

  .container_c {
    margin: 70px auto 0;
    width: 84%;
    height: 500px;
  }

  .container_c .c_c_row_section_text {
    width: 40%;
    height: 80%;
  }

  .container_c .c_c_row_section_right img {
    height: 80%;
    width: 90%;
  }

  .container_d {
    margin-top: -30px;
    font-size: 90%;
    padding: 80px;
  }

  .container_d .c_d_sub_head {
    display: flex;
    align-items: center;
    justify-content: center;

    height: 70px;
  }
  .container_d a {
    font-size: 17px;
  }

  .container_e {
    width: 100%;
    height: 470px;
  }

  .container_e .e_content {
    width: 100%;
  }

  .e_head .e_header {
    font-size: 60px;
  }
  .e_content {
    margin-top: 180px;
    height: 100%;
  }

  .e_con_headings .e_c_h_head {
    font-size: 25px;
  }

  .e_list .e_benefits .e_benefits_list {
    font-size: 18px;
  }

  .container_f .skew_headings {
    font-size: 50px;
  }

  .container_f .skew_context {
    padding-top: 10px;
    font-size: 18px;
  }
  .white-block {
    height: 450px;
  }

  .skew_2nd_section {
    margin: auto;
    width: 850px;
    height: 100%;
  }

  .s_l_head {
    width: 500px;
    margin-left: -30px;
  }

  .s_l_head .s_l_headings {
    font-size: 19px;
  }

  .container_all_count {
    width: 550px;
    margin-left: -55px;
  }

  .numb,
  .percent {
    font-size: 60px;
  }

  .c_n_context {
    font-size: 15px;
  }

  .skew_right_section {
    height: 400px;
  }

  .skew_right_content {
    font-size: 33px;
  }

  .container_g {
    height: auto;
  }

  .our_team {
    width: 80%;
    height: auto;
    display: grid;
    grid-auto-flow: column;
    gap: 1px;
    align-items: center;
    justify-content: center;
  }

  .team_info {
    width: 80%;
    height: 550px;
    margin: auto;
  }

  .info_img {
    width: 75%;
    height: auto;
  }

  .info_name .name {
    font-size: 17px;
  }

  .info_details .details {
    font-size: 15px;
  }

  .social_icon_team {
    margin-top: -50px;
    width: 90%;
    height: 80%;
    margin-right: 100px;
  }

  .social_icon_team .icon_name {
    font-size: 12px;
  }

  .contact_container {
    width: 100%;
    margin-top: 40px;
    height: auto;
  }

  .contact_info {
    height: 700px;
    width: auto;
  }

  .contact_image {
    height: 100%;
    position: relative;
  }

  footer {
    height: auto;
    width: 100%;
  }

  .footer_container {
    width: 100%;
    height: auto;
  }

  .left_foot {
    margin-left: 40px;
  }

  .footer_header {
    font-size: 30px;
  }

  .footer_text {
    font-size: 15px;
  }

  .footer_container .button_foot {
    width: 250px;
    font-size: 18px;
  }

  .footer_container .right_foot {
    margin-top: -20px;
  }
  .footer_info,
  .info_spacing,
  .info_spacing2,
  .info_spacing3 {
    font-size: 15px;
    padding-right: 0;
    padding-left: 20px;
  }

  .other_contact_icon_footer {
    font-size: 5rem;
    width: auto;
  }

  .footer_icon li {
    padding: 0;
  }

  .footer_icon li a {
    text-align: center;
    color: #eee;
  }

  .fab {
    font-size: 1.5rem;
  }
}

